dnl Process this file with autoconf to produce a configure script.

AC_INIT(libvanessa_adt/vanessa_adt.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(vanessa_adt, 0.0.0)

AM_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_FUNC_WAIT3
AC_CHECK_FUNCS(flim)

AC_CHECK_LIB(
  vanessa_logger,
  vanessa_logger_closelog,
  ,
  AC_MSG_ERROR(
    ""
    "**********************************************************************"
    "* libvanessa_adt requires the vanessa_logger generic loging library"
    "* available from ftp://vergenet.net/pub/vanessa_logger/ and mirrors."
    "* libvanessa_adt will _not_ be built. "
    "**********************************************************************"
  ) ;\
)


AC_OUTPUT(
libvanessa_adt/Makefile 
Makefile
vanessa_adt.spec
)
